src/objects/Solution_Milestones__c.object
<CustomObject>
    <description>Solution Milestones tied to a given opportunity</description>
    <fields>
        <fullName>Milestone_Description__c</fullName>
        <description>Description of the milestone</description>
        <label>Milestone Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Due_Date__c</fullName>
        <description>Due Date for the milestone</description>
        <label>Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <picklist>
            <controllingField>Solution_Focus__c</controllingField>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Win / GTM planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery/Path Finding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concept Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform/Arch Definition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust Ref Prog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP / Integrator Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Launch/ Deployment, Ramp/Scale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC Hardened/Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Commit/Design In/Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added as a Standard Offering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC defined for End User w/ business cas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel wins or partners to win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver Intel Teach/Learn and/or CAG Inf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go-To-Market Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concept Pilot Hardening/Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concept Scaled at End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Rev DW Milestones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influence Tender (outside EU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Eligible DWs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Platform Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influence Specification (outside EU)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity the Solution Milestone is associated with</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Solution Milestones</relationshipLabel>
        <relationshipName>Solution_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Results_Key_Learnings__c</fullName>
        <description>Results and Key Learning from the MIlestone</description>
        <label>Results Key Learnings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Area__c</fullName>
        <label>Solution Area</label>
        <picklist>
            <picklistValues>
                <fullName>Adjacent Tech &amp; Enterprise TAM Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Manageability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Virtualization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP / Telco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPC/MIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresh/Ramp/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RISC/Mission Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software or Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Focus__c</fullName>
        <label>Solution Focus</label>
        <picklist>
            <controllingField>Solution_Area__c</controllingField>
            <picklistValues>
                <fullName>2 in 1s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aepona Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Compute Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data Analytics and Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Refresh/Ramp/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco Comms Cloud – Sell Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco Comms Devices – Sell Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco Comms Devices – Sell With</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco Network Infra/DC/Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco PC/Tablet/Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco PC/Tablet – Sell Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco PC/Tablet – Sell With</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco Services on IA - Sell Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center Manager SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving New Embedded Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressway Services Gateway or Tokenization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Big Data and Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare IT Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance Computing - Sell Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel CAS (Cache Accl. SW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Hadoop SW and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel SSDs for Business Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel SSDs for Data Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT: Aggregation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT: Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT: Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT: Sensor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of this solution milestone</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <picklist>
            <controllingField>Milestone__c</controllingField>
            <picklistValues>
                <fullName>Any Deep products (DeepSAFE, DeepCOMMAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom: Airline flight attendant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom: Field ruggedized device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom: Financial Services and Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom: Smartphones in Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom: Tablets - Enterprise Use Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Access Ntwrks (wireless/line/WiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Big Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Business Services (vPRO/Connectio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Cloud build-out (Hardware and Sof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Connected Systems (M2M/HEMS/Medic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Consumer Services (LBS/Security/g</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Content Management (Dig sign/Inte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Content Processing (media process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Core Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Data Center Mission Critical OSS/</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Data Center Refresh (Hardware and</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Data Center SW Ingredients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Data Mining (Privacy/autonomous/p</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Intelligent Systems (IoT, IVI, Di</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Media (Videostreaming/Media Vault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Network Function Virtualization (</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Network Management (OSS/BSS/SIM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Notebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Set Top Box, Home Gateways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms: SW Defined Ntwrks (data traffic/r</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Solution Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{0000000}</displayFormat>
        <label>Solution Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>